Refactor PluginsScanner to improve path handling and error management for plugins directory resolution
Ref: https://github.com/SoftInstigate/restheart/issues/531